--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html ng-app="uitask" ng-strict-di>
+<html ng-app="uitask">
   <head>
     <meta charset="utf-8">
-    <title>uitask</title>
+    <title>Achievement Board</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -24,7 +24,7 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <div ui-view></div>
+    <view-wrapper view-name="'main'"></view-r>
 
     <!-- build:js(src) scripts/vendor.js -->
     <!-- bower:js -->
